updated macmanes citation from biorxiv to peerj

--- a/Oped_Reanalysis.bib
+++ b/Oped_Reanalysis.bib
@@ -121,24 +121,6 @@ url = {https://peerj.com/articles/175},
 volume = {1},
 year = {2013}
 }
-@article{Kodama2012,
-abstract = {New generation sequencing platforms are producing data with significantly higher throughput and lower cost. A portion of this capacity is devoted to individual and community scientific projects. As these projects reach publication, raw sequencing datasets are submitted into the primary next-generation sequence data archive, the Sequence Read Archive (SRA). Archiving experimental data is the key to the progress of reproducible science. The SRA was established as a public repository for next-generation sequence data as a part of the International Nucleotide Sequence Database Collaboration (INSDC). INSDC is composed of the National Center for Biotechnology Information (NCBI), the European Bioinformatics Institute (EBI) and the DNA Data Bank of Japan (DDBJ). The SRA is accessible at www.ncbi.nlm.nih.gov/sra from NCBI, at www.ebi.ac.uk/ena from EBI and at trace.ddbj.nig.ac.jp from DDBJ. In this article, we present the content and structure of the SRA and report on updated metadata structures, submission file formats and supported sequencing platforms. We also briefly outline our various responses to the challenge of explosive data growth.},
-author = {Kodama, Yuichi and Shumway, Martin and Leinonen, Rasko},
-doi = {10.1093/nar/gkr854},
-file = {:Users/halexand/Library/Application Support/Mendeley Desktop/Downloaded/Kodama et al. - 2012 - The Sequence Read Archive explosive growth of sequencing data.pdf:pdf},
-isbn = {1362-4962 (Electronic)$\backslash$r0305-1048 (Linking)},
-issn = {03051048},
-journal = {Nucleic Acids Research},
-month = {jan},
-number = {D1},
-pages = {D54--6},
-pmid = {22009675},
-publisher = {Oxford University Press},
-title = {{The sequence read archive: Explosive growth of sequencing data}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/22009675},
-volume = {40},
-year = {2012}
-}
 @article{Caron2016,
 abstract = {Protists, which are single-celled eukaryotes, critically influence the ecology and chemistry of marine ecosystems, but genome-based studies of these organisms have lagged behind those of other microorganisms. However, recent transcriptomic studies of cultured species, complemented by meta-omics analyses of natural communities, have increased the amount of genetic information available for poorly represented branches on the tree of eukaryotic life. This information is providing insights into the adaptations and interactions between protists and other microorganisms and macroorganisms, but many of the genes sequenced show no similarity to sequences currently available in public databases. A better understanding of these newly discovered genes will lead to a deeper appreciation of the functional diversity and metabolic processes in the ocean. In this Review, we summarize recent developments in our understanding of the ecology, physiology and evolution of protists, derived from transcriptomic studies of cultured strains and natural communities, and discuss how these novel large-scale genetic datasets will be used in the future.},
 author = {Caron, David A. and Alexander, Harriet and Allen, Andrew E. and Archibald, John M. and Armbrust, E. Virginia and Bachy, Charles and Bell, Callum J. and Bharti, Arvind and Dyhrman, Sonya T. and Guida, Stephanie M. and Heidelberg, Karla B. and Kaye, Jonathan Z. and Metzner, Julia and Smith, Sarah R. and Worden, Alexandra Z.},
@@ -171,14 +153,20 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/21572440},
 volume = {29},
 year = {2011}
 }
-@article {MacManes177253,
-	author = {MacManes, Matthew D},
-	title = {The Oyster River Protocol: A Multi Assembler and Kmer Approach For de novo Transcriptome Assembly},
-	year = {2017},
-	doi = {10.1101/177253},
-	publisher = {Cold Spring Harbor Laboratory},
-	abstract = {Characterizing transcriptomes in non-model organisms has resulted in a massive increase in our understanding of biological phenomena. This boon, largely made possible via high-throughput sequencing, means that studies of functional, evolutionary and population genomics are now being done by hundreds or even thousands of labs around the world. For many, these studies begin with a de novo transcriptome assembly, which is a technically complicated process involving several discrete steps. The Oyster River Protocol (ORP), described here, implements a standardized and benchmarked set of bioinformatic processes, resulting in an assembly with enhanced qualities over other standard assembly methods. Specifically, ORP produced assemblies have higher TransRate scores and mapping rates, which is largely a product of the fact that it leverages a multi-assembler and kmer assembly process, thereby bypassing the shortcomings of any one approach. These improvements are important, as previously unassembled transcripts are included in ORP assemblies, resulting in a significant enhancement of the power of downstream analysis. Further, as part of this study, we show that assembly quality is unrelated to taxonomy, nor is it related to the number of reads generated, above 30 million reads. Code Availability: The version controlled open-source code is available at https://github.com/macmanes-lab/Oyster_River_Protocol. Instructions for software installation and use, and other details are available at http://oyster-river-protocol.rtfd.org/.},
-	URL = {https://www.biorxiv.org/content/early/2017/08/16/177253},
-	eprint = {https://www.biorxiv.org/content/early/2017/08/16/177253.full.pdf},
-	journal = {bioRxiv}
+
+@article{MacManes2018,
+abstract = {Characterizing transcriptomes in non-model organisms has resulted in a massive increase in our understanding of biological phenomena. This boon, largely made possible via high-throughput sequencing, means that studies of functional, evolutionary, and population genomics are now being done by hundreds or even thousands of labs around the world. For many, these studies begin with a de novo transcriptome assembly, which is a technically complicated process involving several discrete steps. The Oyster River Protocol (ORP), described here, implements a standardized and benchmarked set of bioinformatic processes, resulting in an assembly with enhanced qualities over other standard assembly methods. Specifically, ORP produced assemblies have higher Detonate and TransRate scores and mapping rates, which is largely a product of the fact that it leverages a multi-assembler and kmer assembly process, thereby bypassing the shortcomings of any one approach. These improvements are important, as previously unassembled transcripts are included in ORP assemblies, resulting in a significant enhancement of the power of downstream analysis. Further, as part of this study, I show that assembly quality is unrelated with the number of reads generated, above 30 million reads. Code Availability: The version controlled open-source code is available at https://github.com/macmanes-lab/Oyster{\_}River{\_}Protocol . Instructions for software installation and use, and other details are available at http://oyster-river-protocol.rtfd.org/ .},
+author = {MacManes, Matthew D.},
+doi = {10.7717/peerj.5428},
+file = {:Users/halexand/Library/Application Support/Mendeley Desktop/Downloaded/MacManes - 2018 - The Oyster River Protocol a multi-assembler and kmer approach for de novo transcriptome assembly.pdf:pdf},
+issn = {2167-8359},
+journal = {PeerJ},
+keywords = {Assembly,Bioinformatics,Transcriptome},
+month = {aug},
+pages = {e5428},
+publisher = {PeerJ Inc.},
+title = {{The Oyster River Protocol: a multi-assembler and kmer approach for de novo transcriptome assembly}},
+url = {https://peerj.com/articles/5428},
+volume = {6},
+year = {2018}
 }
